modified z-index of dragged item to make sure it's always on top

--- a/assets/www/styles/bullseye.css
+++ b/assets/www/styles/bullseye.css
@@ -38,7 +38,10 @@
   position:absolute;
   font-size:28px;
   border-radius:10px;
+  -moz-box-shadow:    3px 3px 4px 1px #333;
+  -webkit-box-shadow: 3px 3px 4px 1px #333;
   box-shadow:3px 3px 4px 1px #333;
+  z-index:1000;
 }
 
 #bullseye{
